Creado mediante Colaboratory

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNdKNR9XRzUloz93nWjGjd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +62,7 @@
         "id": "1-1ok5t6kVzP",
         "outputId": "2b7de19a-0588-4d98-c43a-4c4c0a083896"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +99,7 @@
         "id": "Cd4OyLqyk0yk",
         "outputId": "041262b9-cc57-4ee7-d3a9-584d2837ad66"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +146,7 @@
         "id": "WaJfR6uXmQQb",
         "outputId": "247f04ac-6ef7-4837-82b4-18afc6805095"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +220,7 @@
         "id": "1TVvbRkSm4T1",
         "outputId": "9df83158-3a66-4e35-b7a9-8e01c3ab1624"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +289,7 @@
         "id": "qhsaYHhDuG8b",
         "outputId": "a6bf9d03-539b-42bd-ff00-47c3c7f380f0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,13 +331,13 @@
         "    print(L)"
       ],
       "metadata": {
+        "id": "YKpsbEBCxk5L",
+        "outputId": "d14c447e-158e-46a0-a717-d0e36df1653e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "YKpsbEBCxk5L",
-        "outputId": "d14c447e-158e-46a0-a717-d0e36df1653e"
+        }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,6 +356,158 @@
             "[[ 0  7]\n",
             " [ 7 -1]\n",
             " [-5 -3]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.8. Realizar una función que despliegue una caja, un ovalo, una flecha y un diamante utilizando\n",
+        "asteriscos, como se muestra en la figura."
+      ],
+      "metadata": {
+        "id": "ro1Ld8CQ6MRy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"*********                 ***                    *                    *     \")\n",
+        "print(\"*       *              *       *                ***                  * *    \")\n",
+        "print(\"*       *             *         *              *****                *   *   \")\n",
+        "print(\"*       *             *         *                *                 *     *  \")\n",
+        "print(\"*       *             *         *                *                *       * \")\n",
+        "print(\"*       *             *         *                *                 *     *  \")\n",
+        "print(\"*       *             *         *                *                  *   *   \")\n",
+        "print(\"*       *              *       *                 *                   * *    \")\n",
+        "print(\"*********                 ***                    *                    *     \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OF-6dI5t6GOK",
+        "outputId": "998ff92d-dab0-426b-f450-4240e71d730d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*********                 ***                    *                    *     \n",
+            "*       *              *       *                ***                  * *    \n",
+            "*       *             *         *              *****                *   *   \n",
+            "*       *             *         *                *                 *     *  \n",
+            "*       *             *         *                *                *       * \n",
+            "*       *             *         *                *                 *     *  \n",
+            "*       *             *         *                *                  *   *   \n",
+            "*       *              *       *                 *                   * *    \n",
+            "*********                 ***                    *                    *     \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.9. Realizar una función que despliegue los siguientes patrones utilizando asteriscos."
+      ],
+      "metadata": {
+        "id": "EM23UaqU6kW9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base = 10\n",
+        "altura = 10\n",
+        "\n",
+        "for i in range(1, altura + 1):\n",
+        "    #calcula cantidad de espacios y asteriscos del 1er triangulo\n",
+        "    astTriangulo1 = i * \"*\"\n",
+        "    espTriangulo1 = \" \" * (base - i)\n",
+        "    #calcula cantidad de espacios y asteriscos del 2do triangulo\n",
+        "    astTriangulo2 = \"*\" * (base + 1 - i)\n",
+        "    espTriangulo2 = \" \" * (i - 1)\n",
+        "\n",
+        "    espDefault = \" \" * 5\n",
+        "\n",
+        "    #concatena 1er y 2do  triangulo,junto con espacios\n",
+        "    triangulos1 = astTriangulo1 + espTriangulo1 + espDefault + astTriangulo2 + espTriangulo2\n",
+        "    #invierte el resultado anterior\n",
+        "    triangulos2 = triangulos1[::-1]\n",
+        "\n",
+        "    print(triangulos1 + espDefault + triangulos2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V0Y-MEAv6tuY",
+        "outputId": "68ce582f-3147-4b4f-a0ee-b55b706437bb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*              **********     **********              *\n",
+            "**             *********       *********             **\n",
+            "***            ********         ********            ***\n",
+            "****           *******           *******           ****\n",
+            "*****          ******             ******          *****\n",
+            "******         *****               *****         ******\n",
+            "*******        ****                 ****        *******\n",
+            "********       ***                   ***       ********\n",
+            "*********      **                     **      *********\n",
+            "**********     *                       *     **********\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.10. Realizar una función que despliegue un triángulo utilizando asteriscos. La altura será definida por el\n",
+        "usuario, para el ejemplo de la figura la altura es 5."
+      ],
+      "metadata": {
+        "id": "5zYTLS6c7mWa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "altura = int(input(\"ingresa la altura del triangulo: \"))\n",
+        "\n",
+        "for i in range(1, altura + 1):\n",
+        "        espacios = altura - i\n",
+        "        asteriscos = 2 * i - 1\n",
+        "        linea = \" \" * espacios + \"*\" * asteriscos\n",
+        "        print(linea)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yl8yTHuK7ttY",
+        "outputId": "23747eec-8864-44cc-e2dc-8c607258629c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ingresa la altura del triangulo: 5\n",
+            "    *\n",
+            "   ***\n",
+            "  *****\n",
+            " *******\n",
+            "*********\n"
           ]
         }
       ]
